--- a/src/shared/components/cards/card-bar-evidencia/card-bar-evidencia.component.html
+++ b/src/shared/components/cards/card-bar-evidencia/card-bar-evidencia.component.html
@@ -92,8 +92,9 @@
                                                 </div>
                                             </div>
                                             <div>
-                                                <img class="img" *ngIf="EvidenciaForm.get('imagenBase64')?.value" [src]="EvidenciaForm.get('imagenBase64')?.value" width="100%" height="100%" alt="Vista previa de la imagen">
+                                                <img class="img" *ngIf="EvidenciaForm.get('imagenBase64')?.value" [src]="'data:image/jpeg;base64,' + EvidenciaForm.get('imagenBase64')?.value" width="100%" height="100%" alt="Vista previa de la imagen">
                                             </div>
+
                                         </div>
 
                                         <br> Todos los campos marcados con * son requeridos
@@ -161,7 +162,7 @@
               <path d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3" />
             </svg>
           </button>
-                        <button class="ml-4">
+                        <button class="ml-4" (click)="setDataModalUpdate(evidencias);openModal()">
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-edit" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
               <path stroke="none" d="M0 0h24v24H0z" fill="none" />
               <path d="M7 7h-1a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-1" />
