--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,5 +1,3 @@
-
-
 <div class="container mx-auto px-4 pt-96 h-full">
   <div class="flex content-center items-center justify-center h-full">
     <div class="w-full lg:w-4/12 px-4">
@@ -8,13 +6,15 @@
       >
         <div class="rounded-t mb-0 px-6 py-6">
           <div class="text-center mb-3">
-            <h6 class="text-blueGray-500 text-sm font-bold">Inicia sesión con tus datos</h6>
+            <h6 class="text-blueGray-500 text-sm font-bold">
+              Inicia sesión con tus datos
+            </h6>
           </div>
 
           <hr class="mt-6 border-b-1 border-blueGray-300" />
         </div>
         <div class="flex-auto px-4 lg:px-10 py-10 pt-0">
-          <form>
+          <form [formGroup]="formUserLogin">
             <div class="relative w-full mb-3">
               <label
                 class="block uppercase text-blueGray-600 text-xs font-bold mb-2"
@@ -26,6 +26,7 @@
                 type="email"
                 class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150"
                 placeholder="Correo"
+                formControlName="email"
               />
             </div>
 
@@ -40,6 +41,7 @@
                 type="password"
                 class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150"
                 placeholder="Contraseña"
+                formControlName="password"
               />
             </div>
             <div>
@@ -56,12 +58,13 @@
             </div>
 
             <div class="text-center mt-6">
-                <button
-                (click)="redireccionarAOtraPagina()"
+              <button
+                type="submit"
                 class="bg-blueGray-800 text-white active:bg-blueGray-600 text-sm font-bold uppercase px-6 py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1 w-full ease-linear transition-all duration-150"
-                type="button"
-                >
-                Iniciar sesión
+                [disabled]="!formUserLogin.valid"
+                (click)="login()"
+              >
+                Ingresar
               </button>
             </div>
           </form>
