--- a/src/shared/components/cards/card-bar-evidencia/card-bar-evidencia.component.html
+++ b/src/shared/components/cards/card-bar-evidencia/card-bar-evidencia.component.html
@@ -6,14 +6,13 @@
                 <!-- Button trigger modal -->
                 <div class="flex justify-between">
                     <div>
-                        <button (click)="openModal()" class="min-w-140-px bg-purple-900 text-white py-2 pr-2 pl-2 rounded-md hover:bg-purple-950">Agregar Evidencia</button>
+                        <button (click)="openModal()" class="min-w-140-px bg-purple-900 text-white py-2 pr-2 pl-2 rounded-md hover:bg-purple-950">Agregar evidencia</button>
                     </div>
                     <div>
                         <div style="display: flex; align-items: center;">
                             <input class="border border-gray-300 rounded-md focus:outline-none focus:border-blue-500" type="text" placeholder="Buscar" />
                         </div>
                     </div>
-
                 </div><br><br>
                 <!-- modal -->
                 <div class="modal fixed inset-0 flex" *ngIf="showModal" style="z-index: 2;">
@@ -100,7 +99,7 @@
                                         <br> Todos los campos marcados con * son requeridos
                                         <div class="flex justify-end">
                                             <button [disabled]="!EvidenciaForm.valid" [ngClass]="{'bg-gray-500': !EvidenciaForm.valid, 'bg-purple-900': EvidenciaForm.valid}" class="text-white py-2 px-4 rounded-md hover:bg-red-950 custom-button">
-                              {{ isUpdating ? "ACTUALIZAR " : "AGREGAR " }}
+                              {{ isUpdating ? "Actualizar " : "Agregar " }}
                             </button>
                                         </div>
 
@@ -112,9 +111,7 @@
                         </div>
                     </div>
                 </div>
-
             </div>
-
         </div>
 
     </div>
@@ -127,6 +124,9 @@
                     </th>
                     <th class="table-header">
                         Evidencia
+                    </th>
+                    <th class="table-header">
+                        Programa social
                     </th>
                     <th class="table-header">
                         Descripcion
@@ -147,7 +147,9 @@
                             <img [src]="obtenerRutaImagen(evidencias.foto)" alt="Foto de {{ evidencias.foto }}" width="50" height="50" (click)="mostrarImagenAmpliada(obtenerRutaImagen(evidencias.foto))" />
                         </div>
                     </td>
-
+                    <td class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 font-semibold">
+                        {{ obtenerProgramaSocial(evidencias.beneficiarioId) }}
+                    </td>
                     <td class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 font-semibold">
                         {{ evidencias.descripcion }}
                     </td>
