--- a/src/app/pages/panel/mapa-programas-sociales/mapa-programas-sociales.component.html
+++ b/src/app/pages/panel/mapa-programas-sociales/mapa-programas-sociales.component.html
@@ -1,51 +1,22 @@
 <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded">
     <div class="rounded-t mb-0 px-4 py-3 border-0">
-        <!DOCTYPE html>
-        <html lang="es">
-
-        <head>
-            <meta charset="UTF-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Tabla con Colores y Mapa</title>
-            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-            <!-- Agrega los estilos de Highcharts -->
-            <script src="https://code.highcharts.com/maps/highmaps.js"></script>
-            <style>
-                .color-cell {
-                    width: 30px;
-                    height: 30px;
-                    border: 1px solid #ccc;
-                }
-
-                #baseMap {
-                    width: 400px;
-                    height: 500px;
-                    display: block;
-                }
-            </style>
-        </head>
-
-
         <div class="container mt-5">
-
-            <!-- Mapa -->
             <div class="" style="max-height: 600px; overflow-y: auto; width: 50%; margin: 0;">
                 <label for="searchInput" class="form-label">Buscar municipio:</label>
-                <input type="text" class="form-control" id="searchInput" (input)="actualizarFiltro($event)" placeholder="Buscar">
+                <input type="text" class="input" id="searchInput" (input)="actualizarFiltro($event)" placeholder="Buscar">
             </div>
-
-            <div class="flex ">
-                <div class="flex  mt-3"style="overflow-y: hidden;">
-                    <div class=" " style="max-height: 600px; overflow-y: auto;">
-                        <div class="flex" style="overflow-y: hidden; ">
-                            <table class="table bg-white">
+            <br>
+            <div class="grid gap-4 grid-cols-2" style="overflow-y: hidden;">
+                <div class="table-container" style="max-height: 400px; overflow-y: auto;">
+                   <div class="flex">
+                      <table class="table bg-white">
                                 <thead style="background-color: rgb(75, 43, 105);" class="table-header text-white">
                                     <tr>
                                         <th scope="col">Nombre del municipio</th>
                                         <th scope="col">Indicador</th>
                                         <th scope="col">Total de programas sociales</th>
                                     </tr>
-
+                                </thead>
                                     <tbody class="custom-th">
                                         <tr class="custom-tr" *ngFor="let municipio of beneficiarioMunicipio; let municipios of filtrarMunicipio();   let i = index" [ngClass]="{'bg-gray-100': i % 2 === 0, 'bg-white': i % 2 !== 0, 'custom-table-row': true}">
                                             <td style="font-size: .32cm;">{{ municipio.nombre }}</td>
@@ -54,20 +25,13 @@
                                             </td>
                                             <td style="font-size: .32cm;">{{ municipio.totalBeneficiarios }}</td>
                                         </tr>
-
                                     </tbody>
-                            </table>
-                        </div>
-                    </div>
-                    <div class="w-75 px-4">
-                        <highcharts-chart [Highcharts]="Highcharts" [constructorType]="'mapChart'" [options]="chartMap" id="baseMap" style="width: 100%; height: 700px; display: block">
-                        </highcharts-chart>
-
-                    </div>
+                        </table>
+                    </div>   
                 </div>
-
-                <!-- Tabla con colores -->
-
-
+                <div  class="w-50 px-4">
+                    <highcharts-chart [Highcharts]="Highcharts" [constructorType]="'mapChart'" [options]="chartMap" id="baseMap" style="width: 100%; height: 500px; display: block">
+                    </highcharts-chart>
+                </div>
             </div>
         </div>
