--- a/src/app/pages/panel/mapa-programas-sociales/mapa-programas-sociales.component.css
+++ b/src/app/pages/panel/mapa-programas-sociales/mapa-programas-sociales.component.css
@@ -160,3 +160,20 @@ body {
 .custom-tr {
     height: 55px;
 }
+
+
+
+.input[type="text"] {
+    margin-top: 0.25rem;
+    padding: 0.5rem;
+    border-width: 1px;
+    border-color: #e2e8f0;
+    border-radius: 0.375rem;
+    width: 100%;
+}
+.table-container {
+    border-right: none; /* Elimina el borde en la dirección del ancho */
+    border-bottom: 1px solid #ddd; /* Añade un borde en la dirección de la altura */
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); /* Añade una sombra si es necesario */
+ }
+ 
